<resources>
    <string name="app_name">Brongo Broker</string>
    <string name="default_media_location_folder">Brongo</string>
    <string name="sender_id">1027954730023</string>
    <string name="comp_type">TYPE OF COMPANY</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="otp_text">SMS verification code has been \n sent to:</string>
    <string name="inventory_register_tc"> See Terms &amp; Conditions</string>
    <string name="contact_us">Get in touch with us if you \n need any help</string>
    <string name="onboard_text">**No cash payment will be accepted**</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_pop_message">
Congratulations! You can now visit the Brongo \n office at the specified time for the original \n verification of all the submitted documents.
    </string>
    <string name="office_address">BRONGO \n #203, 4th cross, 3rd Block, above \n Filter Coffee, HRBR  layout, \n Bangalore - 560 043 \n Brongo Support:9590269269</string>
    <string name="version">| Turnip Technolgies Pvt Ltd</string>
    <string name="patent_pending">Patent Pending for 201741031339</string>
    <string name="about_us_tagline">A product of Turnip Technologies</string>
    <string name="understand_rating">Ratings allow us to ensure a great
experience with Brongo for both broker and client. Just like you rate client, client can rate broker on scale of 1-5 Stars after each deal closure.</string>
    <string name="rating_calculation">Your rating is an average of the rating you’ve received from client, and is measure out of 5 stars. Ratings are anonymous, so neither you nor your client will ever see an individual rating you’ve
received. Very few people have a perfect rating. So don’t despair if your average isn’t 5.0. Things that seem small to you can matter to your Client – it’s easy to accidentally be late for a meeting. Knowing a little more about the things that affect a client’s happiness can help you be a 5-start client.</string>
    <string name="rating_quality">Clients appreciate those brokers who carry below qualities:
- Good Local Knowledge.
- Always on time
- Great attitude
- Organised
- Good negotiator
- Great advisor
- Professionalism</string>
    <string name="rating_matters">Ratings foster mutual respect between brokers and clients. This strengthens our community and helps everyone get the most from Brongo. Just as you expect client to treat you with respect, clients hope to feel the same acknowledgement from broker. A high rating is about more than bragging right among your friends; it’s a sign that people enjoyed their time with you. Keep up the good work.</string>
    <string name="about_us_content">Indian real estate takes a digital step forward. We bring real estate closer to you with an app dedicated to put you in touch with real estate brokers in the shortest time possible. Now, no more running around to find the right broker, because we give it all to you in your phone. Now find expert help for your real estate needs using the Brongo app.
</string>
    <string name="medal_note">Note: Client will see these medals on their screen before picking you, out of three brokers. So the medal tag gives you a higher chance of a client picking you.</string>
    <string name="broker_tag">Broker Tag</string>
    <string name="criteria">Criteria</string>
    <string name="bronze">Bronze</string>
    <string name="bronze_desc">If a broker receives 20 times 5 Star rating from clients</string>
    <string name="silver">Silver</string>
    <string name="silver_desc">If a broker receives 40 times 5 Star rating from clients</string>
    <string name="gold">Gold</string>
    <string name="gold_desc">If a broker receives 50 times 5 Star rating from clients</string>
    <string name="builder_tc">Brongo – General Terms and Conditions of Use for Brokers \n
I. ACCEPTANCE OF TERMS OF USE AND OTHER POLICIES  \n
a. All references to “you” or “your” as applicable, means the person that accesses, uses, and/or participates in the Platform (as defined below) by offering services in the capacity of a broker (“Broker”).  If you use the Platform on behalf of a business, you represent and warrant that you have the authority to bind that business. Your acceptance of the Terms of Use will be deemed an acceptance by the business you represent and “you” and “your” herein shall refer to the business.  \n
b. Terms of Use. These terms of use (the “Terms of Use”) govern your use of our website www.brongo.in (the “Website”) and our Brongo application for mobile and handheld devices (the “App”). The Website and the App are jointly referred to as the “Platform”. The Platform is currently owned and operated by Turnip Technologies Private Limited (“Turnip”), a company incorporated under the Companies Act, 2013 and having its registered office at No. 203, 4th Cross, 3rd Block, HRBR Layout, Bangalore – 560 043, Karnataka, India. </string>
<string name="applozic_key_prod">32379970215f70dcb6a6e150693b60026</string>
    <string name="applozic_key_dev">brongo1ef8fd6eda7d86d86a5a94e9e682647e5</string>
    <string name="autoStartPermission">For real-time deal and notification, To make sure Brongo Broker app working properly. Please open the system permission setting and enable permission so app notification will always work if app closed.</string>
</resources>
