<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/expand_group_child">
    <appface.brongo.uiwidget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table_text"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:shadowColor="#c0ffffff"
        android:shadowDx="6.123233995736766e-17"
        android:shadowDy="1"
        android:textSize="15sp"
        android:gravity="left"
        android:textColor="#e63f3f3f"
        app:customFont="lato_regular.ttf"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/broker_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textSize="16dp"
            app:customFont="lato_bold"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:padding="5dp"
            />
        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/criteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="16dp"
            android:textColor="@color/black"
            app:customFont="lato_bold"
            android:layout_weight="1"
            android:padding="5dp"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#dddddd"
        android:layout_marginTop="5dp">

        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/bronze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textSize="15sp"
            app:customFont="lato_regular"
            android:padding="5dp"
            />
        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/bronze_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="15sp"
            app:customFont="lato_regular"
            android:padding="5dp"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">

        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textSize="15sp"
            app:customFont="lato_regular"
            android:padding="5dp"
            />
        <appface.brongo.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:padding="5dp"
            android:text="@string/silver_desc"
            android:textSize="15sp"
            app:customFont="lato_regular" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#dddddd"
        android:layout_marginTop="5dp">

        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textSize="15sp"
            app:customFont="lato_regular"
            android:padding="5dp"
            />
        <appface.brongo.uiwidget.CustomTextView
            android:text="@string/gold_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="15sp"
            app:customFont="lato_regular"
            android:padding="5dp"/>
    </TableRow>
    </TableLayout>
    <appface.brongo.uiwidget.CustomTextView
        android:id="@+id/table_text_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#c0ffffff"
        android:shadowDx="6.123233995736766e-17"
        android:text="@string/medal_note"
        android:shadowDy="1"
        android:paddingLeft="10dp"
        android:textSize="15sp"
        android:gravity="left"
        android:textColor="#e63f3f3f"
        app:customFont="lato_regular"
       />
    </LinearLayout>
</RelativeLayout>