<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ededed"
    android:padding="@dimen/rf_padding_large"
    tools:context=".brongo_broker.fragment.RatingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/rf_padding_large"
        android:background="@drawable/edit_border">
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:textColor="#64687f"
            android:text="Understanding your rating"
            app:customFont="lato_bold.ttf"
            />
        <ImageView
            android:layout_width="@dimen/rf_image_size"
            android:layout_height="@dimen/rf_image_size"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:background="@drawable/ic_user_rating"
            android:layout_gravity="center_horizontal"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:shadowColor="#c0ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textColor="#6e6e6e"
            android:text="@string/understand_rating"
            app:customFont="lato_regular.ttf"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_small"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:background="#64687f"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:textColor="#64687f"
            android:text="How your rating is calculated?"
            app:customFont="lato_bold.ttf"
            />
        <ImageView
            android:layout_width="@dimen/rf_image_size"
            android:layout_height="@dimen/rf_image_size"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:background="@drawable/ic_hand"
            android:layout_gravity="center_horizontal"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:shadowColor="#c0ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textColor="#6e6e6e"
            android:text="@string/rating_calculation"
            app:customFont="lato_regular.ttf"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_small"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:background="#64687f"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:textColor="#64687f"
            android:text="Qualities"
            app:customFont="lato_bold.ttf"
            />
        <ImageView
            android:layout_width="@dimen/rf_image_size"
            android:layout_height="@dimen/rf_image_size"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:background="@drawable/ic_qualities"
            android:layout_gravity="center_horizontal"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:shadowColor="#c0ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textColor="#6e6e6e"
            android:text="@string/rating_quality"
            app:customFont="lato_regular.ttf"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_small"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:background="#64687f"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:layout_marginTop="@dimen/rf_padding_normal"
            android:textColor="#64687f"
            android:text="Why your rating matters"
            app:customFont="lato_bold.ttf"
            />
        <ImageView
            android:layout_width="@dimen/rf_image_size"
            android:layout_height="@dimen/rf_image_size"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:background="@drawable/ic_rating_matters"
            android:layout_gravity="center_horizontal"/>
        <in.brongo.brongo_broker.uiwidget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rf_padding_large"
            android:shadowColor="#c0ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textColor="#6e6e6e"
            android:text="@string/rating_matters"
            app:customFont="lato_regular.ttf"
            />

    </LinearLayout>


</ScrollView>
