<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="appface.brongo.activity.MapActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_success"/>
    <appface.brongo.uiwidget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up Successful"
        android:textColor="@color/appColor"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:customFont="lato_bold.ttf"/>
    <appface.brongo.uiwidget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_pop_message"
        android:textColor="#8f8f91"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:customFont="lato_regular.ttf"/>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="160dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <appface.brongo.uiwidget.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Venue Details"
            android:textColor="@color/appColor"
            android:gravity="center"
            app:customFont="lato_bold.ttf"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calender"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/spinner_doc_veri_date"></Spinner>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edit_line"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/spinner_doc_veri_time"
                android:prompt="@string/select_date"></Spinner>
        </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/edit_line"
      android:layout_marginTop="10dp"/>
        <appface.brongo.uiwidget.CustomTextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/office_address"
            android:textSize="16sp"
            app:customFont="lato_regular.ttf"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/calendar" />

            <appface.brongo.uiwidget.CustomTextView
                android:id="@+id/reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Reminder"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:textColor="@color/edit_hint_color"
                app:customFont="lato_regular.ttf"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button"
            android:text="Submit"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:id="@+id/venue_submit"/>
</LinearLayout>
    </LinearLayout>
</ScrollView>